# LuaWrapper

./: .gitignore  CMakeLists.txt  README.md  demo_script.lua  lua_wrap.cpp  lua_wrap.hpp  lua_wrap_generic.hpp  main.cpp  tensor_all.cpp  tensor_all.hpp  tensor_base.cpp  tensor_base.hpp  torch_script.lua
include/: lua_wrap.hpp  lua_wrap_generic.hpp  tensor_all.hpp  tensor_base.hpp
src/: lua_wrap.cpp  main.cpp  tensor_all.cpp  tensor_base.cpp
